# peebot

./: Cargo.toml  README.md
src/: backend.rs  main.rs  openai.rs  unichunk.rs
src/backend/: cohere.rs  openai_chat.rs  spellbook.rs
src/openai/: completions.rs  moderations.rs
src/openai/chat/: completions.rs
