[package]
name = "peebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-stream = "0.3.4"
async-trait = "0.1.66"
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
futures-core = "0.3.27"
futures-util = "0.3.27"
indexmap = { version = "1.9.2", features = ["serde-1"] }
log = "0.4.17"
lru = "0.10.0"
once_cell = "1.17.1"
openssl-sys = { version = "0.9", features = ["vendored"] }
parking_lot = "0.12.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.94"
serde_plain = "1.0.1"
serenity = { version = "0.11.5", default-features = false, features = ["tokio", "rustls_backend", "http", "builder", "client", "gateway", "model", "utils", "chrono"] }
thiserror = "1.0.39"
tiktoken-rs = "0.2.1"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.3"
unicode-linebreak = "0.1.4"
unicode-segmentation = "1.10.1"

[patch.crates-io]
serenity = { git = 'https://github.com/serenity-rs/serenity', rev = 'f42ec021126fe8bb07158631e871a17ee70acbf2' }
